<resources>
    <string name="app_name">My Introvert</string>
    <string name="homepage">Homepage</string>
    <string name="FItur">fitur_1</string>
    <string name="more">more</string>
    <string name="news">News</string>
    <string name="fitur" />
    <string name="video">Video</string>
    <string name="Fitur">Fitur</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="masukan_email">Masukan email</string>
    <string name="login_u">LOGIN</string>
    <string name="masukan_password">Masukan password</string>
    <string name="any">Any</string>
    <string name="tv_ayoSignup">Belum punya akun? Signup</string>
    <string name="masukan_username">Masukan username</string>
    <string name="sudah_punya_akun_login">Sudah punya akun? Login</string>
    <string name="signup_u">SIGNUP</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="my_introvert_u">MY INTROVERT</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="daftar_u">DAFTAR</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun? Masuk</string>
    <string name="videos">Videos</string>
    <string name="semua_catatan">Semua catatan:</string>
    <string name="judul_catatan">Judul Catatan</string>
    <string name="isi_catatan">Isi Catatan</string>
    <string name="social_skills_assignment">Social Skills Assignment</string>
    <string name="personalized_content">Personalized Content</string>
    <string name="personal_coaching_sessions">Personal Coaching Sessions</string>
    <string name="discussion_forums">Discussion Forums</string>
    <string name="fitur_untukmu">Fitur Untukmu</string>
    <string name="jadwal">Jadwal</string>
    <string name="baca_artikel">Baca Artikel</string>
    <string name="tonton_vidio">Tonton Vidio</string>
    <string name="dengarkan_podcast">Dengarkan Podcast</string>
    <string name="saran_buku">Saran Buku</string>
    <string name="simpan">Simpan</string>
</resources>