<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary_green"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20ssp"
        android:textAlignment="center"
        android:text="@string/daftar_u"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/firstNameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:hint="@string/first_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/lastNameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:hint="@string/last_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/emailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:maxWidth="240dp" />

    <EditText
        android:id="@+id/passwordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/confirmPasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/reusable_btn"
        android:gravity="center"
        android:id="@+id/selectImage"
        >
        <TextView
            android:id="@+id/pilihGambar"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Pilih Gambar"
            android:textColor="@color/primary_green"
            android:textSize="14sp"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_image"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@drawable/reusable_btn"
        android:text="@string/daftar_u"
        android:textColor="@color/primary_green"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sudah_punya_akun_masuk"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:clickable="true"
        android:onClick="openLoginActivity"
        android:focusable="true" />

</LinearLayout>
