<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_green"
    >

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="JUDUL"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isi_catatan"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="16dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/simpan" />

    <TextView
        android:gravity="center"
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/semua_catatan"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:background="@drawable/reusable_btn"
        android:id="@+id/linearLayoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
