<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary_green"
    android:padding="20dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_white"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20dp" />


    <EditText

        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/masukan_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/masukan_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/reusable_btn"
        android:text="Masuk"
        android:textColor="@color/primary_green"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun_daftar"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:clickable="true"
        android:onClick="openSignupActivity"
        android:focusable="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Akses Masuk: \n Email: user@gmail.com \n Password: 123456"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        />

</LinearLayout>
