<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <View
        android:id="@+id/viewHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/primary_green"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/my_introvert_u"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_profile"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textTitle"
        android:tint="@color/white"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/viewHeaderBackground"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderBackground"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_14sdp">

        <TextView
            android:id="@+id/textViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitur_untukmu"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

            <LinearLayout
                android:id="@+id/layoutNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layoutJadwal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViews"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icNews"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_notes"
                    android:onClick="openNotesActivity"
                    />
                <TextView
                    android:id="@+id/teksNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="Catatan"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutJadwal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/layoutDiskusi"
                app:layout_constraintStart_toEndOf="@id/layoutNotes"
                app:layout_constraintTop_toBottomOf="@+id/textViews"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_jadwal"
                    android:id="@+id/IcJadwal"
                    android:onClick="openJadwalActivity"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/jadwal"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutDiskusi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutJadwal"
                app:layout_constraintTop_toBottomOf="@+id/textViews"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_forum"
                    android:id="@+id/IcDiskusi"
                    android:onClick="openDiskusiActivity"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="Diskusi"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rekomendasi Untukmu"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_10sdp"
                />

            <include
                android:id="@+id/DashboardItem1"
                layout="@layout/dashboard_item_1" />

            <include
                android:id="@+id/DashboardItem2"
                layout="@layout/dashboard_item_2" />

            <include
                android:id="@+id/DashboardItem3"
                layout="@layout/dashboard_item_3" />

            <include
                android:id="@+id/DashboardItem4"
                layout="@layout/dashboard_item_4" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

